Footer no longer has a header element, changed scaling for footer on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -452,7 +452,7 @@ footer {
 	justify-content: end;
 }
 
-@media (max-width: 25em) {
+@media (max-width: 50em) {
 	footer {
 		margin-top: var(--size-700);
 	}
